<resources>
    <string name="app_name">Guia do Intercambista</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entre ou Cadastre-se</string>
    <string name="action_sign_in_short">Ir</string>
    <string name="error_invalid_email">Endereço de email inválido</string>
    <string name="error_invalid_password">Senha muito curta</string>
    <string name="error_incorrect_password">Senha incorreta</string>
    <string name="error_field_required">Esse campo é obrigatório</string>
    <string name="permission_rationale">"Acesso aos contatos é necessário para serviço de
        autocompletar."</string>
    <string name="fb_sign_in">Conectar-se com Facebook</string>
    <string name="g_sign_in">Entrar com Google</string>
    <string name="ou">ou</string>
    <string name="welcome">Bem vindo!</string>
    <string name="prompt_name">Nome Completo</string>
    <string name="register_message">Cadastre-se nas opções abaixo para utilizar todos os recursos
        do aplicativo.</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="loading">Carregando…</string>
    <string name="hello">Olá Marcela!</string>
    <string name="choose">Escolha o país onde vai fazer intercâmbio.</string>
    <string name="change">Você pode mudar isso a qualquer hora no menu Configurações</string>
    <string name="title_activity_select_country">Selecionar País</string>
    <string name="finish">Concluir</string>
    <string name="title_activity_main">País</string>

    <string name="navigation_drawer_open">Guia do Intercambista</string>
    <string name="navigation_drawer_close">Fechado</string>

    <string name="action_settings">Settings</string>
    <string name="user_name">Marcela Costa</string>
    <string name="user_email">pcc2@gmail.com</string>
    <string name="menu_string_my_profile">Meu Perfil</string>
    <string name="menu_string_countries">Países</string>
    <string name="menu_string_my_friends">Meus Amigos</string>
    <string name="menu_string_settings">Configurações</string>
    <string name="action_search">Pesquisar</string>
    <string name="action_filter">Filtrar</string>
    <string name="action_edit">Editar</string>
    <string name="country">Holanda</string>
    <string name="exchange_qty">46 intercambistas</string>
    <string name="university_qty">6 universidades cadastradas</string>
    <string name="title_activity_universities">Universidades</string>
    <string name="university_name">Hogeschool van Amsterdam</string>
    <string name="university_city">Amsterdam</string>
    <string name="student_amount">16</string>
    <string name="courses_amount">20</string>
    <string name="title_activity_university_detail"> </string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="university_description">A Hogeschool van Amsterdam ou Universidade de Ciências
        Aplicadas de Amsterdam (HVA) é a maior instituição de ensino superior profissional na
        Holanda. A HVA oferece principalmente programas de bacharelado, mas também tem uma série de
        programas (profissionais) de mestrado. Para estudantes de institutos parceiros
        internacionais, é possível estudar na HVA como estudante de intercâmbio.</string>
    <string name="description">Descrição</string>
    <string name="student_amount_full">16\nintercambistas</string>
    <string name="courses_amount_full">20\ncursos</string>
    <string name="city">Amsterdam</string>
    <string name="rate_this_university">Avalie esta universidade</string>
    <string name="ratings_title">Avaliações</string>
    <string name="review_user_name">Marcos Almeida</string>
    <string name="review_text1">Gostei muito da universidade. Passei 1 ano estudando Ciência da Computação. A cidade é linda e os professores são demais.</string>
    <string name="review_text2">A Holanda é sensacional! Tive aulas de design em dois campis da universidade e são muito bons.</string>
    <string name="review_text3">Não gostei das aulas, alguns professores davam metade da aula em holandês e os intercambistas não entendiam nada.</string>
    <string name="read_more">Ler mais</string>
    <string name="university_email">international@hva.nl</string>
    <string name="university_web">www.hva.nl</string>
    <string name="university_doc">Documentos\nNecessários</string>
    <string name="select_country">Selecione o país</string>
    <string name="title_activity_user_panel">UserPanelActivity</string>
    <string name="user_description">Faço design de produto e moro em Amsterdam. Aceito couch, então podem pedir. :)</string>
    <string name="user_city">Amsterdam</string>
    <string name="menu_string_country">Holanda</string>
    <string name="menu_string_university">Universidades</string>
    <string name="title_activity_friends">Meus Amigos</string>
    <string name="title_activity_maps">Map</string>
    <string name="amanda">Amanda</string>
    <string name="marcos">Marcos</string>
    <string name="name">Nome</string>
    <string name="country_city">Pais - Cidade</string>
    <string name="distance">5 Km</string>
    <string name="you">Você está aqui!</string>
</resources>
