<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="20"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="40"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_action_filter"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="60"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_action_edit"
        app:showAsAction="never" />
</menu>
