<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/pattern_hold_drawable"
    android:backgroundTint="@color/colorAccent"
    tools:context="com.quintas.guiadointercambista.SignupActivity">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hello"
                android:textAlignment="center"
                style="@android:style/TextAppearance.Large"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose"
                android:textAlignment="center"
                style="@android:style/TextAppearance.Medium"
                android:layout_marginTop="16dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:textAlignment="center"
                style="@android:style/TextAppearance.Small" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:paddingBottom="100dp">


                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/select_country"
                    android:id="@+id/autoCompleteTextView"
                    android:inputType="text"/>

                <Button
                    android:id="@+id/country_select_button"
                    style="?android:textAppearanceSmall"
                    android:background="@color/colorAccent"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/finish"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

</LinearLayout>
