<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/friend_picture"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:src="@drawable/amanda"
        android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/friend_name"
            style="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/black_text_hard"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/friend_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/country_city"/>

    </LinearLayout>
    <ImageView
        android:id="@+id/friend_couch"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/weekend"
        android:tint="@color/colorPrimary"
        />
    <TextView
        android:id="@+id/friend_distance"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        style="@style/Base.TextAppearance.AppCompat.Large"
        android:text="@string/distance"
        android:gravity="center_vertical|end"
        android:textAlignment="gravity"
        android:layout_weight="1"/>

</LinearLayout>
