<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.quintas.guiadointercambista.MainActivity"
    tools:showIn="@layout/app_bar_main"
    android:background="@color/gray_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray_light">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/netherlands"
                android:scaleType="centerCrop"
                />

            <View
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:background="@drawable/gradient_overlay_higher"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/ic_windmill"
                    android:id="@+id/country_image"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textSize="40sp"
                    android:id="@+id/country_name"
                    android:layout_gravity="center"
                    android:layout_alignTop="@+id/country_image"
                    android:layout_toEndOf="@+id/country_image"
                    android:textColor="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/exchange_qty"
                    android:id="@+id/qty_exchange"
                    android:layout_below="@+id/country_name"
                    android:layout_toEndOf="@+id/country_image"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/university_qty"
                    android:id="@+id/qty_univesity"
                    android:layout_below="@+id/qty_exchange"
                    android:layout_toEndOf="@+id/country_image"
                    android:textColor="@color/white" />

            </RelativeLayout>

        </FrameLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainListView"
            android:entries="@array/country_subcategories"
            android:layout_margin="16dp"
            android:background="@color/white"
            android:clipToPadding="false"
            android:elevation="2dp"/>

    </LinearLayout>

</RelativeLayout>
